--- a/android-ui/build.gradle
+++ b/android-ui/build.gradle
@@ -23,6 +23,11 @@ android {
 
 dependencies {
     def lifecycle_version = "2.0.0"
+    // Mobius
+    implementation 'com.spotify.mobius:mobius-core:1.2.0'
+    testImplementation 'com.spotify.mobius:mobius-test:1.2.0'
+    implementation 'com.spotify.mobius:mobius-android:1.2.0'  // only for Android support
+    implementation 'com.spotify.mobius:mobius-extras:1.2.0'   // utilities for common patterns
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
