--- a/android-ui/build.gradle
+++ b/android-ui/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation project(path: ':android-viewmodel')
     implementation project(path: ':uscases')
+    implementation project(path: ':network')
 
 }
