--- a/android-ui/src/main/AndroidManifest.xml
+++ b/android-ui/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.pppp.flickrimagegallery">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:name=".application.App"
             android:allowBackup="true"
