--- a/network/build.gradle
+++ b/network/build.gradle
@@ -29,8 +29,13 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "com.squareup.retrofit2:converter-simplexml:2.5.0"
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-jaxb:2.5.0'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
 
     kapt 'com.google.dagger:dagger-compiler:2.20'
     implementation 'com.google.dagger:dagger-android:2.20'
