--- a/network/build.gradle
+++ b/network/build.gradle
@@ -26,10 +26,24 @@ android {
 
 }
 
+def arrow_version = "0.8.2"
 dependencies {
+//    implementation "io.arrow-kt:arrow-core-data:$arrow_version"
+//    implementation "io.arrow-kt:arrow-syntax:$arrow_version"
+//    implementation "io.arrow-kt:arrow-typeclasses:$arrow_version"
+//    implementation "io.arrow-kt:arrow-extras:$arrow_version"
+//    implementation "io.arrow-kt:arrow-core-extensions:$arrow_version"
+//    implementation "io.arrow-kt:arrow-extras-extensions:$arrow_version"
+//    kapt "io.arrow-kt:arrow-meta:$arrow_version"
+//    implementation "io.arrow-kt:arrow-effects-kotlinx-coroutines:$arrow_version" //optional
+//    implementation "io.arrow-kt:arrow-effects-kotlinx-coroutines-extensions:$arrow_version" //optional
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "com.squareup.retrofit2:converter-simplexml:2.5.0"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-jaxb:2.5.0'
