--- a/android-ui/build.gradle
+++ b/android-ui/build.gradle
@@ -29,11 +29,15 @@ dependencies {
     implementation 'com.spotify.mobius:mobius-android:1.2.0'  // only for Android support
     implementation 'com.spotify.mobius:mobius-extras:1.2.0'   // utilities for common patterns
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
 
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
 
