--- a/android-ui/build.gradle
+++ b/android-ui/build.gradle
@@ -53,8 +53,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation project(path: ':android-viewmodel')
     implementation project(path: ':uscases')
     implementation project(path: ':network')
+    implementation project(path: ':entites')
 
 }
