--- a/network/build.gradle
+++ b/network/build.gradle
@@ -62,4 +62,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(path: ':uscases')
     implementation project(path: ':entites')
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
+    testImplementation "io.mockk:mockk:1.9.kotlin12"
+    testImplementation "org.slf4j:slf4j-nop:1.6.1"
+    testCompile("org.assertj:assertj-core:3.11.1")
 }
