--- a/android-ui/build.gradle
+++ b/android-ui/build.gradle
@@ -53,6 +53,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation "androidx.test.ext:junit:1.0.0"
+
     implementation project(path: ':uscases')
     implementation project(path: ':network')
+
+    androidTestImplementation "io.mockk:mockk:1.9.kotlin12"
+    androidTestImplementation "org.slf4j:slf4j-nop:1.6.1"
+    androidTestImplementation("org.assertj:assertj-core:3.11.1")
 }
