--- a/network/build.gradle
+++ b/network/build.gradle
@@ -67,5 +67,5 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
     testImplementation "io.mockk:mockk:1.9.kotlin12"
     testImplementation "org.slf4j:slf4j-nop:1.6.1"
-    testCompile("org.assertj:assertj-core:3.11.1")
+    testImplementation("org.assertj:assertj-core:3.11.1")
 }
