--- a/android-ui/build.gradle
+++ b/android-ui/build.gradle
@@ -19,6 +19,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -55,11 +60,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     androidTestImplementation 'androidx.test:rules:1.1.1'
     androidTestImplementation "androidx.test.ext:junit:1.0.0"
+    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.20'
 
     implementation project(path: ':uscases')
     implementation project(path: ':network')
 
     androidTestImplementation "io.mockk:mockk:1.9.kotlin12"
+    androidTestImplementation "io.mockk:mockk-android:1.9.kotlin12"
     androidTestImplementation "org.slf4j:slf4j-nop:1.6.1"
     androidTestImplementation("org.assertj:assertj-core:3.11.1")
 }
