Migrate to AS 3.3

--- a/android-ui/build.gradle
+++ b/android-ui/build.gradle
@@ -28,6 +28,8 @@ android {
 
 dependencies {
     def lifecycle_version = "2.0.0"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+
     // Mobius
     implementation 'com.spotify.mobius:mobius-core:1.2.0'
     testImplementation 'com.spotify.mobius:mobius-test:1.2.0'
@@ -46,10 +48,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
 
-    implementation 'com.google.dagger:dagger-android:2.20'
-    implementation 'com.google.dagger:dagger-android-support:2.20'
-    kapt 'com.google.dagger:dagger-android-processor:2.20'
-    kapt 'com.google.dagger:dagger-compiler:2.20'
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
@@ -60,7 +62,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     androidTestImplementation 'androidx.test:rules:1.1.1'
     androidTestImplementation "androidx.test.ext:junit:1.0.0"
-    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.20'
+    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.21'
 
     implementation project(path: ':uscases')
     implementation project(path: ':network')
