--- a/android-ui/build.gradle
+++ b/android-ui/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
+    implementation 'com.google.android.material:material:1.0.0'
 
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
@@ -67,8 +68,8 @@ dependencies {
     implementation project(path: ':uscases')
     implementation project(path: ':network')
 
-    androidTestImplementation "io.mockk:mockk:1.9.kotlin12"
-    androidTestImplementation "io.mockk:mockk-android:1.9.kotlin12"
+    androidTestImplementation "io.mockk:mockk:1.9"
+    androidTestImplementation "io.mockk:mockk-android:1.9"
     androidTestImplementation "org.slf4j:slf4j-nop:1.6.1"
     androidTestImplementation("org.assertj:assertj-core:3.11.1")
 }
