--- a/network/build.gradle
+++ b/network/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(path: ':uscases')
+    implementation project(path: ':usecases')
     implementation project(path: ':entites')
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
