--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':android-ui', ':uscases', ':network', ':entites'
+include ':android-ui', ':usecases', ':network', ':entites', ':repository'
