--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -38,9 +38,7 @@ android {
 dependencies {
     api project(path: ':network')
     implementation project(path: ':usecases')
-
     def room_version = '2.0.0'
-
     kapt 'com.google.dagger:dagger-compiler:2.20'
     implementation 'com.google.dagger:dagger-android:2.20'
     implementation 'com.google.dagger:dagger-android-support:2.20'
@@ -48,13 +46,11 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     testImplementation 'org.mockito:mockito-core:1.10.19'
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0"
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0'
 }
 repositories {
     mavenCentral()
