--- a/usecases/build.gradle
+++ b/usecases/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     testImplementation 'com.spotify.mobius:mobius-test:1.2.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "com.google.dagger:dagger:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
