--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -45,12 +45,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
-    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
+    testImplementation "io.mockk:mockk:1.9"
+    testImplementation "org.slf4j:slf4j-nop:1.6.1"
+    testImplementation("org.assertj:assertj-core:3.11.1")
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
 }
 repositories {
     mavenCentral()
