--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     testImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     testImplementation 'org.mockito:mockito-core:1.10.19'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
 }
 repositories {
     mavenCentral()
