--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.google.dagger:dagger-android:2.20'
     implementation 'com.google.dagger:dagger-android-support:2.20'
     implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation "androidx.room:room-runtime:$room_version"
+    api "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
