--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "6.3.1"
+    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC12"
+}
+
 allprojects {
     repositories {
         google()
@@ -24,8 +29,16 @@ allprojects {
     }
 }
 
+subprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+detekt {
+    input = files "android-ui/src/main/java"
 }
 
 ext.dagger_version = "2.21"
