--- a/build.gradle
+++ b/build.gradle
@@ -5,32 +5,31 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
+        classpath "org.jmailen.gradle:kotlinter-gradle:1.20.1"
         // in the individual module build.gradle files
     }
 }
 
 plugins {
-    id "org.jlleitschuh.gradle.ktlint" version "6.3.1"
     id "io.gitlab.arturbosch.detekt" version "1.0.0-RC12"
 }
+
 
 allprojects {
     repositories {
         google()
         jcenter()
         mavenCentral()
-        
     }
-}
 
-subprojects {
-    apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
 
 task clean(type: Delete) {
