--- a/entites/build.gradle
+++ b/entites/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'org.jmailen.kotlinter'
 
 dependencies {
     implementation 'com.spotify.mobius:mobius-core:1.2.0'
