--- a/entites/build.gradle
+++ b/entites/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'org.jmailen.kotlinter'
 
 dependencies {
-    implementation 'com.spotify.mobius:mobius-core:1.2.0'
+    implementation 'com.spotify.mobius:mobius-core:1.2.0'//TODO clean!!!
     testImplementation 'com.spotify.mobius:mobius-test:1.2.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"//TODO clean!!!
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
