--- a/usecases/build.gradle
+++ b/usecases/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
-    testImplementation "io.mockk:mockk:1.9.kotlin12"//TODO cleanup!
+    testImplementation "io.mockk:mockk:1.9"
     testImplementation "org.slf4j:slf4j-nop:1.6.1"
     testImplementation("org.assertj:assertj-core:3.11.1")
 
