Refactor Use cases

--- a/android-ui/src/main/AndroidManifest.xml
+++ b/android-ui/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".features.detail.DetailActivity" />
+        <activity android:name=".features.detail.view.DetailActivity" />
     </application>
 
 </manifest>
